kubernetes/apps/redis/redis-commander-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander-service
  namespace: default
spec:
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
  selector:
    app: redis-commander
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: redis-commander
          image: docker.io/rediscommander/redis-commander:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: redis-commander.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander-service
                port:
                  number: 8086
